[package]
name = "ping-pong"
version = "0.1.0"
authors = ["phnixir <67435287+phnixir@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
message-io = "0.13"
bincode = "1.3"
openssl-sys = { version = "0.9.63", features = ["vendored"] }

[[bin]]
name = "ping-pong"
path = "src/main.rs"
