[package]
name = "trackerconqueror"
version = "0.1.0"
authors = ["phnixir <67435287+phnixir@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
message-io = "0.14"
bincode = "1.3"
openssl-sys = { version = "0.9", features = ["vendored"] }
csv = "1.1"
colored = "2"
trackermeta = { version = "0.2.0", features = ["infinity-retry"] }

[[bin]]
name = "trackerconqueror"
path = "src/main.rs"
